tests/baselines/reference/checkJsxChildrenProperty12(strict=true).errors.txt
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'NewableFunction'.
file.tsx(12,7): error TS2454: Variable 'condition' is used before being assigned.


!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
==== file.tsx (1 errors) ====
    import React = require('react');
    
    interface ButtonProp {
        a: number,
        b: string,
        children: Button;
    }
    
    class Button extends React.Component<ButtonProp, any> {
        render() {
    		let condition: boolean;
    		if (condition) {
    		    ~~~~~~~~~
!!! error TS2454: Variable 'condition' is used before being assigned.
            	return <InnerButton {...this.props} />
    		}
    		else {
    			return (<InnerButton {...this.props} >
    				<div>Hello World</div>
    				</InnerButton>);
    		}
        }
    }
    
    interface InnerButtonProp {
    	a: number
    }
    
    class InnerButton extends React.Component<InnerButtonProp, any> {
    	render() {
    		return (<button>Hello</button>);
    	}
    }
    